fix blog format on iphone

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1051,6 +1051,8 @@ main {
   box-shadow: var(--shadow-4);
   border-radius: 16px;
   z-index: 1;
+  padding: 10px; /* Add padding */
+  /* margin-bottom: 10px; Add margin for spacing between blog items */
 }
 
 .blog-post-item > a::before {
@@ -1126,6 +1128,7 @@ main {
   justify-content: flex-start;
   align-items: center;
   gap: 7px;
+  margin-top: 10px; /* Spacing above metadata */
   margin-bottom: 10px;
 }
 
